# MedicalPathPlan-NDI-VSLAM

./: CMakeLists.txt  README.md
include/: camera.h  cameraRender.h  frame.h  interactorStyleCenterline.h  loopclosing.h  map.h  nditrack.h  onnxrun.h  optimizer.h  pathSetting.h  pointcloudmapping.h  visualmap.h  voslam.h  vtkpose.h
src/: TrackingSystem.cpp  camera.cpp  cameraRender.cpp  frame.cpp  interactorStyleCenterline.cpp  loopclosing.cpp  main.cpp  main_backup_new.cpp  map.cpp  nditrack.cpp  onnxrun.cpp  optimizer.cpp  pathSetting.cpp  pointcloudmapping.cpp  visualmap.cpp  voslam.cpp  vtkpose.cpp
